fix: logout beareauth problem
